improve print css

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -49,6 +49,50 @@
 	
 	a[href]:after {
 	    content: none;
-	  }
+	}
+	
+	#bodyContent .row {
+	    page-break-inside: avoid;
+	}
+	
+	.row .col-md-1, .row .col-md-2, .row .col-md-3, .row .col-md-4, .row .col-md-5, .row .col-md-6, .row .col-md-7, .row .col-md-8, .row .col-md-9, .row .col-md-10, .row .col-md-11, .row .col-md-12 {
+        float: left;
+   }
+   .row .col-md-12 {
+        width: 100%;
+   }
+   .row .col-md-11 {
+        width: 91.66666667%;
+   }
+   .row .col-md-10 {
+        width: 83.33333333%;
+   }
+   .row .col-md-9 {
+        width: 75%;
+   }
+   .row .col-md-8 {
+        width: 66.66666667%;
+   }
+   .row .col-md-7 {
+        width: 58.33333333%;
+   }
+   .row .col-md-6 {
+        width: 50%;
+   }
+   .row .col-md-5 {
+        width: 41.66666667%;
+   }
+   .row .col-md-4 {
+        width: 33.33333333%;
+   }
+   .row .col-md-3 {
+        width: 25%;
+   }
+   .row .col-md-2 {
+        width: 16.66666667%;
+   }
+   .row .col-md-1 {
+        width: 8.33333333%;
+   }
 
 }
