--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -94,5 +94,20 @@
    .row .col-md-1 {
         width: 8.33333333%;
    }
+   {
+   .tuto-step-image .carousel-indicators li:first-child { 
+   		display:none;
+   }
+   .tuto-step-image .carousel-indicators li {
+   		width:100%;
+   		height:auto;
+   }
+   .tuto-main-image img {
+   		height:auto;
+   }
+   .hrContentMinor {
+   	    margin: 15px 0;
+	    border-bottom: 2px solid #ccc;
+   }
 
 }
