update footer and header for print

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -33,6 +33,9 @@
 	.printWikifabFooter {
 		.hidden();
 	}
+	.print-only {
+		.hidden();
+	}
 }
 
 @media print {
@@ -45,6 +48,10 @@
 	.footer-main,
 	.mw-editsection, .mw-editsection-like, .toctoggle, .magnify, .footer-places {
 		.hidden();
+	}
+	
+	.tuto_print_url{
+		margin-top:-1em;
 	}
 	
 	.printWikifabFooter {
