print header style

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -54,6 +54,28 @@
 		margin-top:-1em;
 	}
 	
+	/***********************
+	 * header
+	 ***********************/
+	.printWikifabHeader {
+	    border-bottom: 1px solid #eeeeee;
+	    border-bottom-width: 1px;
+	    border-bottom-style: solid;
+	    border-bottom-color: rgb(238, 238, 238);
+	    padding-bottom: .2em;
+	    margin-bottom: .4em;
+	}
+	.printWikifabHeader .logo img {
+		margin-top:20px;
+	}
+	.printWikifabHeader .firstHeading {
+	    border-bottom-width: 0px;
+	    padding-bottom: .1em;
+	    margin-bottom: 0;
+	}
+	.contentHeader {
+		display:none;
+	}
 	.printWikifabFooter {
 	    position: fixed;
 	    bottom: 0;
