HR between steps style

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -203,7 +203,7 @@
    }
    #bodyContent .hrContentMinor {
    	  margin: 15px 0;
-	  border-bottom: 2px solid #ccc;
+	    border-bottom: 2px dotted #ccc;
    }
 	#bodyContent .row > div {
 	  page-break-inside: avoid;
