PDF export style

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -182,7 +182,10 @@
 	    text-shadow: rgba(0,0,0,0.498039) 0px 1px 3px !important;
 	}
 	#bodyContent .printMainTitle .tuto-details-author-name {
-	    font-size:18px;
+    font-size: 19px;  
+    position: absolute;
+    margin-left: 57px;
+    margin-top: 8px;
 	}
 
    #bodyContent .tuto-main-image .annotatedImageContainer {
@@ -190,10 +193,15 @@
     	overflow: hidden;
    }
    #bodyContent .tuto-details-author-box a.image {
-   		width: 45px;
-    	height: 45px;
-        margin: 0px 8px 2px 0px;
+    width: 45px;
+    height: 45px;
+    margin: 0px 8px 2px 0px;
+    display: block;
+    position: absolute;
    }
+   #bodyContent .tuto-main-image p {
+    margin-bottom: 40px;
+  }
    #bodyContent .tuto-details-author-box a.image img {
     	max-height: 45px;
         border-radius: 100%;
