--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -171,6 +171,7 @@
     padding-bottom: 14px;
     padding-left: 23px;
     width: 100%;
+    position: relative;
     background: #000 !important;
     background: -webkit-linear-gradient(transparent, #000) !important;
     background: -o-linear-gradient(transparent, #000) !important;
@@ -181,6 +182,10 @@
 	    color: #fff !important;
 	    text-shadow: rgba(0,0,0,0.498039) 0px 1px 3px !important;
 	}
+
+  #bodyContent .printMainTitle h1 .mw-headline {
+    font-weight:bold;
+  }
 	#bodyContent .printMainTitle .tuto-details-author-name {
     font-size: 19px;  
     position: absolute;
