--- a/resources/styles/screen.less
+++ b/resources/styles/screen.less
@@ -104,7 +104,7 @@ html {
 		li {
 			a {
 				.tocnumber {
-					display: inline-block;
+					display: none;
 					text-align: right;
 					margin-right: .5ex;
 					min-width: 2ex; //up to two digits
