full width instruction step when many images

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -133,6 +133,9 @@
 	.row div.fullWidthPrint {
 		width: 100%;
 	}
+	#bodyContent .row div.step-instructions-manyimage {
+		width: 100%;
+	}
 	#bodyContent .tuto-step-image .carousel-indicators li:first-child {
 		display: none;
 	}
