--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -232,10 +232,13 @@
 		margin: 15px 0;
 		border-bottom: 2px dotted #ccc;
 	}
-	#bodyContent .row>div {
+	#bodyContent .row.firstPage > div {
+		page-break-inside: auto;
+	}
+	#bodyContent .row > div {
 		page-break-inside: avoid;
 	}
-	#bodyContent .row>div:first-child {
+	#bodyContent .row > div:first-child {
 		page-break-after: avoid;
 	}
 	#bodyContent .form-intro label.label-danger {
