set img width on firstpage

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -205,6 +205,10 @@
 		height: 500px;
 		overflow: hidden;
 	}
+	#bodyContent .tuto-main-image .annotatedImageContainer a,
+	#bodyContent .tuto-main-image .annotatedImageContainer img {
+		width:100%
+	}
 	#bodyContent .tuto-main-image p {
 		margin-bottom: 40px;
 	}
