correct page break

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -236,6 +236,9 @@
 		margin: 15px 0;
 		border-bottom: 2px dotted #ccc;
 	}
+	#bodyContent .row.firstPage {
+		page-break-inside: auto;
+	}
 	#bodyContent .row.firstPage > div {
 		page-break-inside: auto;
 	}
