--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -52,9 +52,12 @@
 	.printWikifabHeader {
 		margin-bottom: .4em;
 	}
+	.printWikifabHeader .logo  {
+		text-align:center;
+	}
 	.printWikifabHeader .logo img {
-		margin-top: 20px;
-		width: 100%;
+		height: 75px;
+		margin-bottom: 1em;
 	}
 	.printWikifabHeader .header-info {
 		display: none;
@@ -132,6 +135,7 @@
 	}
 	.row div.fullWidthPrint {
 		width: 100%;
+		display:block;
 	}
 	#bodyContent .row div.step-instructions-manyimage {
 		width: 100%;
