--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -51,6 +51,7 @@
 	 ***********************/
 	.printWikifabHeader {
 		margin-bottom: .4em;
+		margin-top: 5em;
 	}
 	.printWikifabHeader .logo  {
 		text-align:center;
@@ -71,7 +72,7 @@
 		display: none;
 	}
 	#firstHeading {
-		font-size: 3em;
+		font-size: 2.5em;
 		text-align: center;
 		border-bottom: 0px;
 	}
@@ -217,13 +218,16 @@
 		margin-bottom: 40px;
 	}
 	.tuto-main-image .pageurl {
-		padding: 1em 0 0.6em 0;
-		font-size: 1.2em;
+		padding: 0.6em;
+		font-size: 1em;
 		text-align:center;
+		background: #f1f1f1 !important;
+		margin-bottom: 3em;
+    	border-bottom: 1Px solid #ddd;
 	}
 	.lasteditdateinfo {
-		font-size: 1.1em;
-		text-align:center;
+		font-size: 1.3em;
+		text-align: center;
 	}
 	#bodyContent .tuto-details-author-box a.image {
 		width: 45px;
@@ -232,9 +236,19 @@
 		display: block;
 		position: absolute;
 	}
+	#bodyContent .pageurl a {
+	    color: #999 !important;
+	}
 	#bodyContent .tuto-details-author-box a.image img {
 		max-height: 45px;
 		border-radius: 100%;
+	}
+	#bodyContent .tuto-details-author-name {
+	    font-size: 1.5em;
+	    color: #777 !important;
+	}
+	#bodyContent .tuto-details-author-box a.name {
+		vertical-align:middle;
 	}
 	#bodyContent .hrContentMinor {
 		margin: 15px 0;
