Tools and Materials print style

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -197,6 +197,29 @@
 		color: #fff !important;
 		text-shadow: rgba(0, 0, 0, 0.498039) 0px 1px 3px !important;
 	}
+	#bodyContent #mw-content-text .tabber .tabbertab {
+	    padding: 0px;
+    	border: none;
+	}
+	#bodyContent .Input-tabs {
+	    margin: 0px 0px;
+    	float: left;
+    	width: 100%;
+    	border-bottom: 2px dotted #ccc;
+    	padding-bottom: 15px;
+	}
+	#bodyContent #mw-content-text ul.tabbernav li.tabberactive a {
+		border: none;
+    	padding: 0px;
+    	margin-right: 10px;
+    	margin-left: 0px;
+    	font-size: 23px;
+    	font-weight: 500;
+	}
+	#bodyContent #mw-content-text ul.tabbernav {
+	    padding: 0px;
+    	border: none;
+	}
 	#bodyContent .printMainTitle h1 .mw-headline {
 		font-weight: bold;
 	}
