--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -202,18 +202,20 @@
     	border: none;
 	}
 	#bodyContent .Input-tabs {
-	    margin: 0px 0px;
-    	float: left;
-    	width: 100%;
+  		margin: 20px 0px 0px 0px;
+   	 	float: left;
+   		width: 100%;
     	border-bottom: 2px dotted #ccc;
     	padding-bottom: 15px;
 	}
 	#bodyContent #mw-content-text ul.tabbernav li.tabberactive a {
 		border: none;
+	}
+	#bodyContent #mw-content-text ul.tabbernav li a {
     	padding: 0px;
-    	margin-right: 10px;
+    	margin-right: 30px;
     	margin-left: 0px;
-    	font-size: 23px;
+    	font-size: 22px;
     	font-weight: 500;
 	}
 	#bodyContent #mw-content-text ul.tabbernav {
