--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -220,7 +220,8 @@
 	}
 	#bodyContent #mw-content-text ul.tabbernav {
 	    padding: 0px;
-    	border: none;
+    	border-bottom: 1px solid #ddd;
+    	padding-bottom: 5px;
 	}
 	#bodyContent .printMainTitle h1 .mw-headline {
 		font-weight: bold;
