margin auto on navbar

--- a/resources/styles/Components/NavbarHorizontal.less
+++ b/resources/styles/Components/NavbarHorizontal.less
@@ -121,7 +121,7 @@
 
 		width: auto;
 		padding: ((@navbar-height - @input-height-base) / 2) @navbar-padding-horizontal;
-		margin: -1px 0 0;
+		margin: 0;
 	}
 }
 
