--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -38,7 +38,7 @@
 
 @media print {
 
-	body {
+body {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important;
     -webkit-font-smoothing: subpixel-antialiased;
     text-rendering: optimizeLegibility;
@@ -72,6 +72,42 @@
 
 .mw-body .tuto-items-container .printTOC #toc .toctitle {
     padding-left:0;
+}
+
+.icon-instructions {
+    background: #f9f9f9 !important;
+}
+
+.icon-instructions.dont-icon .icon-instructions-icon {
+    color:#000 !important;
+}
+
+.icon-instructions.caution-icon {
+    background-color: #fff7f7 !important;
+}
+
+.icon-instructions.caution-icon .icon-instructions-icon {
+    color:#db0001 !important;
+}
+
+.icon-instructions.pin-icon .icon-instructions-icon {
+    color:#777 !important;
+}
+
+.icon-instructions.idea-icon {
+    background-color: #fffcef !important;
+}
+
+.icon-instructions.idea-icon .icon-instructions-icon {
+    color:#c6a701 !important;
+}
+
+.icon-instructions.info-icon {
+    background-color: rgba(58, 163, 227, 0.08) !important;
+}
+
+.icon-instructions.info-icon .icon-instructions-icon {
+    color:#3aa3e3 !important;
 }
 
 .mw-body .tuto-items-container .printTOC #toc .toctitle h2 {
