--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -61,7 +61,7 @@ body {
     font-weight: bold;
     margin: 0;
     padding: 50px 0;
-    width: calc(100% - 150px);
+    width: calc~("100% - 150px");
     float: left;
 }
 
