--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -62,7 +62,7 @@ body {
     font-weight: bold;
     margin: 0;
     padding: 50px 0;
-    width: calc~("100% - 170px");
+    width: calc(~"100% - 170px");
     float: left;
 }
 
