--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -142,9 +142,8 @@ body {
 .print-image {
     width: 140px;
     height: 100px;
-    background: red !important;
     position: absolute;
-    top: -146px;
+    top: -160px;
     right: 30px;
     border: 1px solid #ccc;
 }
@@ -177,9 +176,11 @@ body {
 }
 
 .book-main-banner {
-    height: 500px;
+    height: 600px;
     overflow: hidden;
+    background: #000 !important;
     position: relative;
+    -webkit-print-color-adjust: exact;
 }
 
 .book-title-banner {
@@ -188,28 +189,29 @@ body {
     position: relative;
 }
 
-.book-main-banner img,
-.book-title-banner img {
+.book-main-banner img {
     position: absolute;
     left: 50%;
     top: 50%;
+    opacity: 0.6;
     width: 100%;
     min-width: 100%;
     min-height: 100%;
+    -webkit-print-color-adjust: exact;
     max-width: 1200px;
     max-height: 1200px;
     -ms-transform: translateY(-50%) translateX(-50%);
     -webkit-transform: translateY(-50%) translateX(-50%);
 }
 
-.book-title-banner img {
-    -webkit-filter: blur(10px); /* Safari 6.0 - 9.0 */
-    filter: blur(10px);
+.book-main-banner img {
+    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+    filter: blur(5px);
 }
 
 .print-stripes {
     width: 100%;
-    height: 120px;
+    height: 130px;
     background: white !important;
     float: left;
     -webkit-transform: skewY(-5deg);
@@ -236,16 +238,16 @@ body {
 .stripesbottomcover,
 .stripesbottomtitle {
     position: relative;
-    top: 855px;
+    top: 1255px;
     -webkit-print-color-adjust: exact;
 }
 
 .stripesbottomtitle {
-    top: 1300px;
+    top: 1500px;
 }
 
 .stripesbottomtriangle {
-    border-left: 1250px solid transparent;
+    border-left: 1550px solid transparent;
     border-bottom: 120px solid #52bad5;
 }
 
@@ -257,7 +259,7 @@ body {
 }
 
 .stripestoptitre {
-    border-right: 1250px solid transparent;
+    border-right: 1550px solid transparent;
     border-top: 120px solid #52bad5;
     -webkit-print-color-adjust: exact;
     margin-bottom: 70px;
@@ -292,6 +294,7 @@ body {
     left: 50%;
     top: 50%;
     width: 100%;
+    border-radius: 6px;
     min-width: 100%;
     -webkit-print-color-adjust: exact;
     min-height: 100%;
