Print style fix

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -59,6 +59,7 @@ body {
 #main-content-header #firstHeading {
     font-size: 2.4em;
     text-align: left;
+    width: 100%;
     border-bottom: 0px;
     font-weight: bold;
     margin: 0;
@@ -137,19 +138,6 @@ body {
 
 .print-description {
     font-size: 1.4em;
-}
-
-.print-image img {
-	height:auto;
-}
-
-.print-image {
-    width: 140px;
-    height: 100px;
-    position: absolute;
-    top: -150px;
-    right: 30px;
-    overflow: hidden;
 }
 
 .content {
