--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -202,7 +202,7 @@ body {
 }
 
 .print-stripes {
-    width: 102%;
+    width: 1550px;
     height: 130px;
     background: white !important;
     float: left;
