--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -217,6 +217,7 @@ body {
 .mini-title-content {
     -webkit-print-color-adjust: exact;
     background: #52bad5 !important;
+    background: @main-btn-color; !important;
     color: #fff !important;
     padding: 10px 40px 20px;
     margin-bottom: 20px;
@@ -241,6 +242,7 @@ body {
 .stripesbottomtriangle {
     border-left: 1550px solid transparent;
     border-bottom: 120px solid #52bad5;
+    border-bottom: 120px solid @main-btn-color;
 }
 
 .stripesbottomrectangle {
@@ -253,6 +255,7 @@ body {
 .stripestoptitre {
     border-right: 1550px solid transparent;
     border-top: 120px solid #52bad5;
+    border-top: 120px solid @main-btn-color;
     -webkit-print-color-adjust: exact;
     margin-bottom: 70px;
 }
