--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -217,7 +217,7 @@ body {
 .mini-title-content {
     -webkit-print-color-adjust: exact;
     background: #52bad5 !important;
-    background: @main-btn-color; !important;
+    background: @main-btn-color !important;
     color: #fff !important;
     padding: 10px 40px 20px;
     margin-bottom: 20px;
