--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -249,6 +249,7 @@ body {
     width: 100%;
     height: 100px;
     background: #52bad5 !important;
+    background: @main-btn-color !important;
     -webkit-print-color-adjust: exact;
 }
 
