--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -86,7 +86,6 @@ header .sitename {
 }
 
 
-
 #main-content-header .maincontent-header-tail {
     display: none;
 }
@@ -96,6 +95,7 @@ header .sitename {
     background-color: #fafbfc !important;
     -webkit-print-color-adjust: exact;
     page-break-before: always;
+    margin-top: 40px;
 }
 
 #main-content-header:first-child {
