--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -98,15 +98,10 @@ header .sitename {
     margin-bottom: 25px;
     -webkit-print-color-adjust: exact;
     page-break-before: always;
-    margin-top: 40px;
 }
 
-#main-content-header:first-child {
-	page-break-before: auto;
-}
-
-#main-content-header #firstHeading {
-    font-size: 2em;
+#main-content-header .firstHeading {
+    font-size: 1.7em;
     text-align: left;
     width: 100%;
     border-bottom: 0px;
@@ -484,16 +479,36 @@ header .sitename {
 		border-radius: 0;
 	}
 	#bodyContent .tuto-items-container .tuto-items-details-container {
-		background: #f1f1f1 !important;
+		    background: #fff !important;
+		    float: left;
+		    width: auto;
+		    border: 2px solid #aaa;
+			-webkit-print-color-adjust: exact;
+			margin-right:10px;
 	}
+
+	#bodyContent .tuto-items-details-container-left {
+	    float: left;
+	    margin-right: 10px;
+	    position: unset;
+	}
+
+	#bodyContent .tuto-items-details-container-right {
+	    font-size: unset;
+		margin-top: 0;
+	}
+
 	#bodyContent .tuto-items-container .tuto-items-details-container.printTOC
 		{
 		    background: #f9f9f9 !important;
 		    border: 1px solid #ddd;
 		    border-radius: 0;
 		    padding: 20px;
+		    width: 100%;
 		    -webkit-print-color-adjust: exact;
+		    margin-right:0px;
 	}
+
 
 	.mw-special-MainPdf .page #bodyContent .tuto-items-container .tuto-items-details-container.printTOC {
 		display:none;
